update(redoc): add js in repo to avoid extra csp rules

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url="./swagger.json" lazy-rendering="true"></redoc>
-    <script src="//rebilly.github.io/ReDoc/releases/v1.x.x/redoc.min.js"> </script>
+    <redoc spec-url="swagger.json" lazy-rendering="true"></redoc>
+    <script src="js/redoc.min.js"> </script>
   </body>
 </html>
