--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Flat API Specification</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="https://flat.io/developers/api/reference/" />
     <style>
       body {
         margin: 0;
