--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
         margin: 0;
         padding: 0;
       }
-      api-logo img {
+      img[alt="logo"] {
         margin: 30px 0;
       }
       loading-bar span {
@@ -19,12 +19,10 @@
   </head>
   <body>
     <redoc spec-url="swagger.json" lazy-rendering="true"></redoc>
-    <script src="js/redoc.min.js"> </script>
+    <script src="js/redoc.standalone.js"> </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-35889059-4', 'auto', {'allowLinker': true});
-      ga('require', 'linker');
-      ga('linker:autoLink', ['flat.education', '*.flat.education', 'flat.io'] );
+      ga('create', 'UA-35889059-4', 'auto');
     </script>
   </body>
 </html>
