fix(redoc): hide third-party loaded logo

--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,8 @@
       img[alt="logo"] {
         margin: 30px 0;
       }
-      loading-bar span {
-        background-color: #6e90f6!important;
+      a[href="https://redocly.com/redoc/"] {
+        display: none!important;
       }
     </style>
   </head>
